[gd_scene load_steps=48 format=3 uid="uid://jos7dfgt1e75"]

[ext_resource type="Script" path="res://scripts/hud/chest_reward_screen.gd" id="1_8qhyi"]
[ext_resource type="Texture2D" uid="uid://diytmm47u7uob" path="res://assets/item/closed_chest.png" id="1_k7vj5"]
[ext_resource type="Texture2D" uid="uid://c18rqsfeckt36" path="res://assets/item/open_chest.png" id="2_s4w8j"]
[ext_resource type="Texture2D" uid="uid://dttvt22q81qb7" path="res://assets/hud/ability_icons/EMP.png" id="3_jjxhs"]
[ext_resource type="Texture2D" uid="uid://ffhwgjofgjr4" path="res://assets/hud/ability_icons/Heart.png" id="4_iglw5"]
[ext_resource type="Texture2D" uid="uid://djbj10eic81jy" path="res://assets/hud/ability_icons/Magnet.png" id="5_twiub"]
[ext_resource type="Texture2D" uid="uid://cl1ux2nfrhffj" path="res://assets/hud/ability_icons/MovementSpeed.png" id="6_rfont"]
[ext_resource type="Texture2D" uid="uid://dav1d12j6gk0o" path="res://assets/weapons/blue_laser_gun.png" id="8_wpo30"]
[ext_resource type="Texture2D" uid="uid://c3a1s1sos2e6h" path="res://assets/hud/ability_icons/HeartWithGreenPlus.png" id="8_yrj4i"]
[ext_resource type="Texture2D" uid="uid://dbxr4wai4omck" path="res://assets/hud/ability_icons/Shield.png" id="9_mjxxb"]
[ext_resource type="SystemFont" uid="uid://dth5n6d8288l3" path="res://assets/In_Game_Hud.tres" id="10_eqe6y"]
[ext_resource type="Texture2D" uid="uid://cguio8ykpy5e3" path="res://assets/hud/ability_icons/ooze.png" id="11_4nuf2"]
[ext_resource type="Texture2D" uid="uid://cp3e8pmxs1k7s" path="res://assets/enemy/turret/Bullet.png" id="12_8imqy"]
[ext_resource type="Texture2D" uid="uid://7pvf6mdvib8y" path="res://assets/weapons/shotgun/AdjustedShotgun.png" id="13_tndkm"]
[ext_resource type="AudioStream" uid="uid://bux664wiv47ik" path="res://assets/sound/item/coin_collet_short.mp3" id="14_2h1a4"]
[ext_resource type="Texture2D" uid="uid://do6cnffstfmsi" path="res://assets/weapons/crossbow/CrossbowLoaded.png" id="14_jmvt7"]
[ext_resource type="Texture2D" uid="uid://drkihxgkeqgo1" path="res://assets/weapons/boomerang/Boomerang.png" id="15_4wfk3"]
[ext_resource type="AudioStream" uid="uid://druon5s41fvsc" path="res://assets/sound/reward/payout_award_short.mp3" id="15_f41g6"]
[ext_resource type="AudioStream" uid="uid://dqgrnsvvdwu88" path="res://assets/sound/reward/level-up-5-326133.mp3" id="16_8nyw5"]
[ext_resource type="Texture2D" uid="uid://lkw3cgsijwfo" path="res://assets/hud/ability_icons/Radiation.png" id="16_pd3b7"]
[ext_resource type="Texture2D" uid="uid://dhl1fbs1hbvwe" path="res://assets/hud/Coins/CoinStack.png" id="17_y5vs1"]

[sub_resource type="CanvasTexture" id="CanvasTexture_666j6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bsirw"]
atlas = ExtResource("1_k7vj5")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3p08"]
atlas = ExtResource("2_s4w8j")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="SpriteFrames" id="SpriteFrames_pg7oj"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_bsirw")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_q3p08")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_18ha0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i6qlt"]
atlas = ExtResource("3_jjxhs")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bpud"]
atlas = ExtResource("4_iglw5")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4awl"]
atlas = ExtResource("5_twiub")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh51e"]
atlas = ExtResource("6_rfont")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i7kt"]
atlas = ExtResource("9_mjxxb")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogxaa"]
atlas = ExtResource("8_yrj4i")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="SpriteFrames" id="SpriteFrames_d6l0q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6qlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bpud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4awl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh51e")
}, {
"duration": 1.0,
"texture": ExtResource("8_wpo30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i7kt")
}, {
"duration": 1.0,
"texture": ExtResource("11_4nuf2")
}, {
"duration": 1.0,
"texture": ExtResource("12_8imqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogxaa")
}, {
"duration": 1.0,
"texture": ExtResource("13_tndkm")
}, {
"duration": 1.0,
"texture": ExtResource("14_jmvt7")
}, {
"duration": 1.0,
"texture": ExtResource("15_4wfk3")
}, {
"duration": 1.0,
"texture": ExtResource("16_pd3b7")
}, {
"duration": 1.0,
"texture": ExtResource("17_y5vs1")
}],
"loop": true,
"name": &"rotation",
"speed": 15.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_1iw2j"]
font = ExtResource("10_eqe6y")

[sub_resource type="Animation" id="Animation_q573s"]
resource_name = "End"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Reward:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, -96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Reward:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [12.5664]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Reward:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RewardLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5jeyj"]
length = 0.01
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Reward:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Reward:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Reward:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RewardLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Reward:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_c7ekr"]
resource_name = "Reward_Rise"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Reward:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-14, 48), Vector2(-14, -96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Reward:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 12.5664]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Reward:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.0823529), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RewardLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o5wdo"]
_data = {
"End": SubResource("Animation_q573s"),
"RESET": SubResource("Animation_5jeyj"),
"Reward_Rise": SubResource("Animation_c7ekr")
}

[sub_resource type="Animation" id="Animation_jtwfr"]
resource_name = "End"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chest:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Chest/Beam:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Chest/Beam:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(719.98, 2806.15)]
}

[sub_resource type="Animation" id="Animation_76piu"]
resource_name = "OpenChest"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chest:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.785398, 0.0, 0.785398, 0.0, 0.785398, 0.0, 0.785398, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Chest/Beam:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.376471), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Chest/Beam:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.3, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(719.98, 0), Vector2(719.98, 2806.15)]
}

[sub_resource type="Animation" id="Animation_5h2k1"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chest:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Chest/Beam:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u2qhe"]
_data = {
"End": SubResource("Animation_jtwfr"),
"OpenChest": SubResource("Animation_76piu"),
"RESET": SubResource("Animation_5h2k1")
}

[sub_resource type="Animation" id="Animation_tjolw"]
resource_name = "FadeInButton"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClickArea:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(7.99999, 59.714),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ljq42"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClickArea:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lqhoo"]
_data = {
"FadeInButton": SubResource("Animation_tjolw"),
"RESET": SubResource("Animation_ljq42")
}

[sub_resource type="Gradient" id="Gradient_0u7xb"]
offsets = PackedFloat32Array(0.27907, 0.483721, 0.553488, 0.716279)
colors = PackedColorArray(0, 0, 0, 0.235294, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0.235294)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_spk6p"]
gradient = SubResource("Gradient_0u7xb")
fill_from = Vector2(0.461538, 0)
fill_to = Vector2(0.470085, 0.995726)

[node name="ChestRewardScreen" type="Node2D"]
process_mode = 2
script = ExtResource("1_8qhyi")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0, 0.670588, 0, 1)
position = Vector2(-0.5, 0.999998)
scale = Vector2(211, 452)
texture = SubResource("CanvasTexture_666j6")

[node name="Chest" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 72)
scale = Vector2(0.10417, 0.091941)
sprite_frames = SubResource("SpriteFrames_pg7oj")

[node name="Beam" type="Sprite2D" parent="Chest"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.918327, 0.708485, 0, 0.596078)
position = Vector2(254.393, 87.0125)
rotation = 3.14159
scale = Vector2(719.98, 1e-05)
texture = SubResource("CanvasTexture_18ha0")
centered = false

[node name="Reward" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(-14, 48)
scale = Vector2(0.0620555, 0.0553901)
sprite_frames = SubResource("SpriteFrames_d6l0q")

[node name="RewardLabel" type="Label" parent="."]
visible = false
offset_left = -87.0
offset_top = 133.0
offset_right = 87.0
offset_bottom = 201.0
text = "YOU GOT 
"
label_settings = SubResource("LabelSettings_1iw2j")
horizontal_alignment = 1

[node name="RewardAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o5wdo")
}

[node name="ChestAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u2qhe")
}

[node name="ButtonAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lqhoo")
}

[node name="ClickArea" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -1103.0
offset_top = -617.0
offset_right = 1095.0
offset_bottom = 616.0
focus_mode = 0
theme_override_fonts/font = ExtResource("10_eqe6y")
text = "Click To Continue"
icon = SubResource("GradientTexture2D_spk6p")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AnimationDelay" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PickUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_2h1a4")
volume_db = -10.0
bus = &"SFX"

[node name="RewardSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_f41g6")
volume_db = -7.5
bus = &"SFX"

[node name="ItemRewardSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_8nyw5")
bus = &"SFX"

[connection signal="animation_finished" from="ButtonAnimator" to="." method="_on_button_animator_animation_finished"]
[connection signal="pressed" from="ClickArea" to="." method="_on_click_area_pressed"]
[connection signal="finished" from="PickUpSound" to="." method="_on_pick_up_sound_finished"]
[connection signal="finished" from="RewardSound" to="." method="_on_reward_sound_finished"]
